# xauusd-trader

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_PHASES.md  CLAUDE.md  XAUUSD_AI_Bot_Blueprint_V2.docx  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
ai_server/: __init__.py  __main__.py  config.py  health.py  protocol.py  scoring.py  server.py
ai_server/features/: derived_features.py  feature_engine.py  macro_features.py  price_features.py
ai_server/macro/: __init__.py  alpha_vantage_client.py  fred_client.py  news_calendar.py
ai_server/models/: __init__.py  base.py  ensemble.py  nfp_model.py  (+4 more)
architecture/: ai-engine.md  communication-protocol.md  infrastructure.md  risk-management.md  scalper-bot.md  swing-bot.md
data/: XAUUSD_H1.parquet  XAUUSD_H4.parquet  XAUUSD_M1.parquet  XAUUSD_M5.parquet
data_pipeline/: __init__.py  backtest_analyzer.py  data_validator.py  dukascopy_download.py  feature_pipeline.py  macro_updater.py  monte_carlo.py  mt5_export.py  stress_test.py
gold_scalper_ea/: GoldScalper.mq5
gold_swing_ea/: GoldSwingRider.mq5
models/: gold_scalper_bilstm.weights.h5  gold_scalper_xgb.json  gold_swing_bilstm.weights.h5  gold_swing_xgb.json  nfp_direction_xgb.json  regime_classifier.weights.h5
monitoring/: __init__.py  news_schedule.py  performance_tracker.py  telegram_bot.py  watchdog.py
tests/: conftest.py  test_backtesting.py  test_data_pipeline.py  test_features.py  test_models.py  test_monitoring.py  test_news_schedule.py  test_protocol.py  test_scoring.py  test_server.py  test_training.py
(+28 files in other folders)
