[project]
name = "xauusd-trader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
    "xgboost>=3.2.0",
]
